OSL clamp, min and max functions have wrong signature when arguments are integers #36863

Closed
opened 2013-09-29 20:02:01 +02:00 by Michel Anders · 4 comments
Member

%%%--- Operating System, Graphics card ---

w7 64bit full sysinfo in attached .blend

- Blender version with error, and version that worked ---

version 2.68 (sub 5), revision b'60058M'. b'Release' build date: b'2013-09-11', b'19:17:36'

all older versions seem to behave identical

- Short description of error ---

The clamp(), min() and max() functions should return the same type as the types of their arguments (says the docs :-). For int arguments this appears not to be the case: the return type is float. This means that if we have to cast the return value back again to an int if we want to pass it to a function taking an int argument. Please see the attached .blend with the shader code and it is probably much clearer than what i try to describe here :-)

The workaround is obvious of course, but maybe this can be passed upstream.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Uncomment the indicated linen in the attached .blend and (re)compile the shader: the compiler complain it cannot find a matching f(float) function (because there is only a f(int) defined.
%%%

%%%--- Operating System, Graphics card --- w7 64bit full sysinfo in attached .blend - Blender version with error, and version that worked --- version 2.68 (sub 5), revision b'60058M'. b'Release' build date: b'2013-09-11', b'19:17:36' all older versions seem to behave identical - Short description of error --- The clamp(), min() and max() functions should return the same type as the types of their arguments (says the docs :-). For int arguments this appears not to be the case: the return type is float. This means that if we have to cast the return value back again to an int if we want to pass it to a function taking an int argument. Please see the attached .blend with the shader code and it is probably much clearer than what i try to describe here :-) The workaround is obvious of course, but maybe this can be passed upstream. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Uncomment the indicated linen in the attached .blend and (re)compile the shader: the compiler complain it cannot find a matching f(float) function (because there is only a f(int) defined. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%The issue can even be reduced to a single line of code:

int a = clamp(1,2,3);

gives error: Can't assign 'float' to int a%%%

%%%The issue can even be reduced to a single line of code: int a = clamp(1,2,3); gives error: Can't assign 'float' to int a%%%

%%%Thanks for the report, fixed in SVN 60427.

The bug was fixed in OSL 1.3.2 already, but we used an outdated version of the stdosl.h file.%%%

%%%Thanks for the report, fixed in SVN 60427. The bug was fixed in OSL 1.3.2 already, but we used an outdated version of the stdosl.h file.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36863
No description provided.