Fix [#36863] OSL clamp, min and max functions have wrong signature when arguments are integers * This was fixed in OSL 1.3.2, but we used an outdated stdosl.h.